# Practice-C

./: BST.c  CMakeLists.txt  README.md  calculator.c  case.c  compareFiles.c  day_of_year.c  htoi.c  input.txt  input1.txt  more pointer stuff.c  pointer to array.c  pointer_str_fuctions.c  practice.c  reading input.c  reading lines of files.c  reverse.c
